# INKAMI

./: .cursorrules  .gitignore  README.md  package-lock.json  package.json  test_ocr.py
.github/workflows/: deploy-web.yml
apps/server/: Dockerfile  README.md  fly.toml  pyproject.toml
apps/server/app/: main.py
apps/server/app/api/routes/: chapters.py  jobs.py  speakers.py
apps/server/app/core/: config.py  storage.py
apps/server/app/models/: schemas.py
apps/server/app/services/: alignment.py  detection.py  ocr.py  pipeline.py  speaker.py  tts.py  vision.py
apps/server/app/workers/: tasks.py  worker.py
apps/server/scripts/: process_demo_page.py
apps/web/: eslint.config.mjs  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: fonts.ts  layout.tsx  page.tsx
apps/web/app/chapters/: page.tsx
apps/web/app/docs/: page.tsx
apps/web/components/: AppShell.tsx  Aurora.tsx  BottomNav.tsx  FeatureMarquee.tsx  ImmersiveReader.tsx  LiveNarrationMock.tsx  LoadingOrbit.tsx  PlaybackControls.tsx  ProcessingStatus.tsx  ReaderCanvas.tsx  StatsRibbon.tsx  TopBar.tsx  UploadSteps.tsx  UploadWizard.tsx  VoiceGallery.tsx  VoiceInspector.tsx
apps/web/hooks/: usePlaybackController.ts
apps/web/lib/: api.ts  types.ts
apps/web/styles/: globals.css
docs/: api-contract.md  dataset-guidelines.md  pipeline.md
infrastructure/dev/: docker-compose.yml
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
samples/: README.md
supabase/migrations/: 01_init.sql
(+4 files in other folders)
