[tool.poetry]
name = "inkami-server"
version = "0.1.0"
description = "FastAPI backend and worker pipeline for the Inkami manga narrator."
authors = ["INKAMI AI <team@inkami.local>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.6" }
pydantic = "^2.9.2"
pydantic-settings = "^2.4.0"
python-multipart = "^0.0.9"
storage3 = "^0.7.4"
supabase = "^2.6.0"
sqlalchemy = "^2.0.30"
asyncpg = "^0.29.0"
alembic = "^1.13.2"
httpx = "^0.27.2"
redis = "^5.0.8"
rq = "^1.16.2"
boto3 = "^1.35.23"
numpy = "^1.26.4"
opencv-python-headless = "^4.10.0"
torch = "^2.4.0"
ultralytics = "^8.3.6"
paddleocr = "^2.7.3"
Pillow = "^10.4.0"
tenacity = "^8.4.2"
elevenlabs = "^1.8.1"
azure-cognitiveservices-speech = "^1.37.0"
google-cloud-texttospeech = "^2.16.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.6.4"
pre-commit = "^3.8.0"

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

